[gd_scene load_steps=13 format=3 uid="uid://6tajuw2aqt8u"]

[ext_resource type="PackedScene" uid="uid://bfgfxx1slhm4o" path="res://code/Levels/level.tscn" id="1_gwm4n"]
[ext_resource type="Script" path="res://code/Levels/Level1/level_1.gd" id="2_mo6f6"]
[ext_resource type="PackedScene" uid="uid://csfi7ex28yyc8" path="res://code/characters/targets/star.tscn" id="3_cc6b2"]
[ext_resource type="Script" path="res://code/Levels/Level1/SpinnyOne.gd" id="4_e50di"]
[ext_resource type="PackedScene" uid="uid://df0altrj7m2dy" path="res://code/Weapons/circle_cannon.tscn" id="4_q2c48"]
[ext_resource type="PackedScene" uid="uid://b46fwu01xp0lt" path="res://code/Bullets/small_round.tscn" id="5_tenyv"]
[ext_resource type="PackedScene" uid="uid://dr3ctblmjl4t" path="res://code/Weapons/arc_cannon.tscn" id="7_ue5gg"]
[ext_resource type="PackedScene" uid="uid://dcu3ssopsft1" path="res://code/characters/targets/Heart.tscn" id="8_k52vr"]
[ext_resource type="Script" path="res://code/Levels/Level1/LeftRight.gd" id="9_6liev"]
[ext_resource type="PackedScene" uid="uid://dehy6hawgn4yq" path="res://code/Weapons/cannon.tscn" id="10_sgcjn"]

[sub_resource type="Curve2D" id="Curve2D_pn0ha"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -90, -90, 0, 0, 0, 0, 90, -90, 0, 0, 0, 0, 90, 90, 0, 0, 0, 0, 90, -90, 0, 0, 0, 0, -90, -90)
}
point_count = 5

[sub_resource type="Curve2D" id="Curve2D_ave22"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 90, 90, 0, 0, 0, 0, -90, 90, 0, 0, 0, 0, -90, -90, 0, 0, 0, 0, -90, 90, 0, 0, 0, 0, 90, 90)
}
point_count = 5

[node name="level_1" instance=ExtResource("1_gwm4n")]
script = ExtResource("2_mo6f6")
s_rank = 70000.0
a_ramk = 67000.0
b_rank = 43500.0
c_rank = 40000.0
d_rank = 36000.0

[node name="SpinnyOne" type="Node2D" parent="EnemyLayer" index="0"]
unique_name_in_owner = true
position = Vector2(0, -400)

[node name="DrunkStar" parent="EnemyLayer/SpinnyOne" index="0" instance=ExtResource("3_cc6b2")]
position = Vector2(0, -40)
script = ExtResource("4_e50di")

[node name="circle_cannon" parent="EnemyLayer/SpinnyOne/DrunkStar/WeaponControl" index="0" instance=ExtResource("4_q2c48")]
radius = 2.0
points = 24
point_direction = 1
bullet_scene = ExtResource("5_tenyv")
stack_speed_gap = 10.0
speed = 50.0
acceleration = 20.0
max_speed = 300
color = Color(1, 1, 0, 1)

[node name="Arc_Cannon" parent="EnemyLayer/SpinnyOne/DrunkStar/WeaponControl" index="1" instance=ExtResource("7_ue5gg")]
bullet_count = 9
point_direction = 1
bullet_scene = ExtResource("5_tenyv")
stack_speed_gap = 40.0
acceleration = 20.0
max_speed = 300
color = Color(1, 1, 0, 1)

[node name="RightL" type="Node2D" parent="EnemyLayer" index="1"]
unique_name_in_owner = true
position = Vector2(440, -40)

[node name="Path2D" type="Path2D" parent="EnemyLayer/RightL" index="0"]
curve = SubResource("Curve2D_pn0ha")

[node name="PathFollow2D" type="PathFollow2D" parent="EnemyLayer/RightL/Path2D" index="0"]
position = Vector2(-90, -90)
rotates = false

[node name="Heart" parent="EnemyLayer/RightL/Path2D/PathFollow2D" index="0" instance=ExtResource("8_k52vr")]
script = ExtResource("9_6liev")

[node name="Cannon" parent="EnemyLayer/RightL/Path2D/PathFollow2D/Heart/WeaponControl" index="0" instance=ExtResource("10_sgcjn")]
bullet_scene = ExtResource("5_tenyv")
bullet_stack = 4
stack_speed_gap = 20.0
speed = 300.0
acceleration = 20.0
min_speed = 280.0
max_speed = 340
color = Color(1, 0.572549, 0.662745, 1)

[node name="Arc_Cannon" parent="EnemyLayer/RightL/Path2D/PathFollow2D/Heart/WeaponControl" index="1" instance=ExtResource("7_ue5gg")]
bullet_count = 5
arc_gap_degrees = 20.0
bullet_scene = ExtResource("5_tenyv")
speed = 300.0
acceleration = 20.0
min_speed = 280.0
max_speed = 340
color = Color(1, 0.572549, 0.662745, 1)

[node name="LeftL" type="Node2D" parent="EnemyLayer" index="2"]
unique_name_in_owner = true
position = Vector2(-440, 40)

[node name="Path2D" type="Path2D" parent="EnemyLayer/LeftL" index="0"]
curve = SubResource("Curve2D_ave22")

[node name="PathFollow2D" type="PathFollow2D" parent="EnemyLayer/LeftL/Path2D" index="0"]
position = Vector2(90, 90)
rotation = 3.14159
rotates = false

[node name="Heart" parent="EnemyLayer/LeftL/Path2D/PathFollow2D" index="0" instance=ExtResource("8_k52vr")]
script = ExtResource("9_6liev")

[node name="Cannon" parent="EnemyLayer/LeftL/Path2D/PathFollow2D/Heart/WeaponControl" index="0" instance=ExtResource("10_sgcjn")]
bullet_scene = ExtResource("5_tenyv")
bullet_stack = 4
stack_speed_gap = 40.0
speed = 300.0
acceleration = 20.0
min_speed = 280.0
max_speed = 340
color = Color(1, 0.572549, 0.662745, 1)

[node name="Arc_Cannon" parent="EnemyLayer/LeftL/Path2D/PathFollow2D/Heart/WeaponControl" index="1" instance=ExtResource("7_ue5gg")]
bullet_count = 5
arc_gap_degrees = 20.0
bullet_scene = ExtResource("5_tenyv")
stack_speed_gap = 40.0
speed = 300.0
acceleration = 20.0
min_speed = 280.0
max_speed = 340
color = Color(1, 0.572549, 0.662745, 1)

[editable path="EnemyLayer/SpinnyOne/DrunkStar"]
[editable path="EnemyLayer/RightL/Path2D/PathFollow2D/Heart"]
[editable path="EnemyLayer/LeftL/Path2D/PathFollow2D/Heart"]
